# shop_net

./: pyproject.toml
shop_project/: .prospector.yaml  conftest.py  pytest.ini
shop_project/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
shop_project/catalog/migrations/: 0001_initial.py  0002_alter_order_date_created.py
shop_project/catalog/tests/: tets_client_views.py
shop_project/catalog/tests/fixtures/: categories_fixture.json  discount_fixture.json  producer_fixture.json  product_fixture.json
shop_project/shop_project/: settings.py  urls.py
shop_project/users/: admin.py  models.py  urls.py  views.py
shop_project/users/tests/: test_users.py
